Bug: gly doesn't search for Glycerine

--- a/app/src/main/res/layout/compound_new.xml
+++ b/app/src/main/res/layout/compound_new.xml
@@ -13,6 +13,7 @@
         style="@style/FinalDilutionH1"
         android:layout_width="match_parent"
         android:layout_height="50dp"
+        android:layout_marginTop="@dimen/bottom_sheet_top_margin"
         android:text="@string/buttonNewCompound"
         android:textAlignment="center"
         android:textSize="40sp"
