--- a/app/src/main/res/layout/compound_panel.xml
+++ b/app/src/main/res/layout/compound_panel.xml
@@ -3,18 +3,20 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/compounds_fragment"
     android:layout_width="match_parent"
-    android:layout_height="@dimen/bottom_sheet_expanded_height"
+    android:layout_height="match_parent"
     android:background="#00ffffff"
     android:elevation="40dp"
     app:behavior_hideable="false"
     app:behavior_peekHeight="@dimen/bottom_sheet_collapsed_height"
-    app:layout_behavior="android.support.design.widget.BottomSheetBehavior">
+    app:layout_behavior="android.support.design.widget.BottomSheetBehavior"
+    app:layout_constraintHeight_percent="80">
 
     <com.labwhisper.biotech.finaldilution.compound.view.AddComponentButtonView
         android:id="@+id/compoundsListHeader"
         style="@style/FinalDilutionH1"
         android:layout_width="match_parent"
         android:layout_height="50dp"
+        android:layout_marginTop="@dimen/bottom_sheet_top_margin"
         android:text="@string/buttonNewCompound"
         android:textAlignment="center"
         android:textSize="40sp"
@@ -39,8 +41,8 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:background="@color/grey1"
-        android:requiresFadingEdge="vertical"
         android:fadingEdgeLength="40dp"
+        android:requiresFadingEdge="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -64,10 +66,11 @@
         android:layout_height="@dimen/button_size"
         android:layout_marginEnd="@dimen/grid_margin_side"
         android:layout_marginBottom="24dp"
-        android:drawableStart="@drawable/ic_search_white_24dp"
-        android:inputType="textAutoComplete"
         android:background="@drawable/search_button"
         android:contentDescription="@string/button_search_description"
+        android:drawableStart="@drawable/ic_search_white_24dp"
+        android:elevation="6dp"
+        android:inputType="textAutoComplete"
         android:paddingStart="12dp"
         android:paddingEnd="12dp"
         android:textAppearance="?android:attr/textAppearanceMedium"
@@ -82,11 +85,11 @@
         android:id="@+id/exit_search_button"
         android:layout_width="@dimen/button_size"
         android:layout_height="@dimen/button_size"
-        android:visibility="invisible"
-        android:src="@drawable/ic_clear_white_24dp"
         android:background="@color/transparent"
+        android:contentDescription="@string/exit_search_description"
+        android:src="@drawable/ic_clear_white_24dp"
+        android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="@+id/search_compound_button"
-        app:layout_constraintEnd_toEndOf="@+id/search_compound_button"
-        android:contentDescription="@string/exit_search_description" />
+        app:layout_constraintEnd_toEndOf="@+id/search_compound_button" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
