--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,8 +5,10 @@
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
+    <dimen name="bottom_sheet_collapsed_visible_height">54dp</dimen>
     <dimen name="bottom_sheet_collapsed_height">54dp</dimen>
     <dimen name="bottom_sheet_expanded_height">420dp</dimen>
+    <dimen name="bottom_sheet_top_margin">0dp</dimen>
     <dimen name="grid_margin_side">16dp</dimen>
     <dimen name="small_vertical_margin">4dp</dimen>
     <dimen name="medium_vertical_margin">8dp</dimen>
