--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -17,4 +17,5 @@
     <dimen name="search_button_offset_closed">12dp</dimen>
     <dimen name="compound_list_item_height">60dp</dimen>
     <dimen name="button_one_fifth">60dp</dimen>
+    <dimen name="bottom_sheet_header_height">50dp</dimen>
 </resources>
