--- a/app/src/main/res/layout/compound_panel.xml
+++ b/app/src/main/res/layout/compound_panel.xml
@@ -83,6 +83,7 @@
 
     <ImageButton
         android:id="@+id/exit_search_button"
+        android:elevation="10dp"
         android:layout_width="@dimen/button_size"
         android:layout_height="@dimen/button_size"
         android:background="@color/transparent"
