--- a/app/src/main/res/layout/solution_edit.xml
+++ b/app/src/main/res/layout/solution_edit.xml
@@ -22,7 +22,7 @@
             android:focusable="true"
             android:focusableInTouchMode="true"
             android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
-            app:layout_constraintBottom_toTopOf="@id/componentsTextView"
+            app:layout_constraintBottom_toTopOf="@id/componentsList"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -41,16 +41,12 @@
 
         </android.support.v7.widget.Toolbar>
 
-        <ListView
-            android:id="@+id/componentsTextView"
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/componentsList"
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_marginStart="@dimen/grid_margin_side"
             android:layout_marginEnd="@dimen/grid_margin_side"
-            android:divider="@color/bluish_gray"
-            android:dividerHeight="0.5dp"
-            android:ems="10"
-            android:text=""
             app:layout_constraintBottom_toTopOf="@+id/beaker"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -67,8 +63,20 @@
             app:layout_constraintDimensionRatio="1"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/componentsTextView"
+            app:layout_constraintTop_toBottomOf="@+id/componentsList"
             app:layout_constraintVertical_weight="0.4" />
+
+        <TextView
+            android:id="@+id/tv_volume_beaker_text"
+            style="@style/FinalDilutionBeakerTitle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="50dp"
+            android:layout_marginEnd="36dp"
+            android:text="@string/volumeText"
+            app:layout_constraintBottom_toTopOf="@+id/volumeViewSwitcher"
+            app:layout_constraintEnd_toEndOf="@+id/beaker"
+            app:layout_constraintStart_toStartOf="@+id/beaker" />
 
         <ViewSwitcher
             android:id="@+id/volumeViewSwitcher"
