--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -32,6 +32,13 @@
         <item name="android:typeface">sans</item>
     </style>
 
+    <style name="FinalDilutionBeakerTitle">
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textSize">17sp</item>
+        <item name="android:typeface">sans</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
     <style name="FinalDilutionButton">
         <item name="android:stateListAnimator">@animator/button_state_list_anim_material</item>
         <item name="android:layout_centerHorizontal">true</item>
