--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -76,4 +76,9 @@
         <item name="android:layout_marginEnd">20dp</item>
     </style>
 
+    <style name="FinalDilutionCheckbox">
+        <item name="android:scaleX">1.3</item>
+        <item name="android:scaleY">1.3</item>
+    </style>
+
 </resources>
