--- a/app/src/main/res/layout/compound_new.xml
+++ b/app/src/main/res/layout/compound_new.xml
@@ -4,6 +4,7 @@
     android:id="@+id/new_compound_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:elevation="@dimen/bottom_sheet_elevation"
     android:clickable="true"
     android:focusable="true"
     android:orientation="vertical">
