--- a/app/src/main/res/layout/compound_panel.xml
+++ b/app/src/main/res/layout/compound_panel.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#00ffffff"
-    android:elevation="40dp"
+    android:elevation="@dimen/bottom_sheet_elevation"
     app:behavior_hideable="false"
     app:behavior_peekHeight="@dimen/bottom_sheet_collapsed_height"
     app:layout_behavior="android.support.design.widget.BottomSheetBehavior"
@@ -69,7 +69,7 @@
         android:background="@drawable/search_button"
         android:contentDescription="@string/button_search_description"
         android:drawableStart="@drawable/ic_search_white_24dp"
-        android:elevation="6dp"
+        android:elevation="@dimen/button_search_elevation"
         android:inputType="textAutoComplete"
         android:paddingStart="12dp"
         android:paddingEnd="12dp"
@@ -83,7 +83,7 @@
 
     <ImageButton
         android:id="@+id/exit_search_button"
-        android:elevation="10dp"
+        android:elevation="@dimen/button_above_search_elevation"
         android:layout_width="@dimen/button_size"
         android:layout_height="@dimen/button_size"
         android:background="@color/transparent"
