--- a/app/src/main/res/layout/solution_edit.xml
+++ b/app/src/main/res/layout/solution_edit.xml
@@ -11,22 +11,20 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginBottom="@dimen/bottom_sheet_collapsed_visible_height"
-        android:baselineAligned="true"
-        android:orientation="vertical"
         tools:context=".solution.view.EditActivity">
 
         <android.support.v7.widget.Toolbar
             android:id="@+id/toolbar"
             android:layout_width="0dp"
-            android:layout_height="0dp"
+            android:layout_height="wrap_content"
             android:focusable="true"
             android:focusableInTouchMode="true"
             android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
-            app:layout_constraintBottom_toTopOf="@id/componentsList"
+            app:layout_constraintBottom_toTopOf="@+id/scrollView"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_weight="0.1"
+            app:layout_constraintVertical_chainStyle="spread_inside"
             app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
 
             <EditText
@@ -41,98 +39,112 @@
 
         </android.support.v7.widget.Toolbar>
 
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/componentsList"
-            android:layout_width="0dp"
+        <android.support.v4.widget.NestedScrollView
+            android:id="@+id/scrollView"
+            android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_marginStart="@dimen/grid_margin_side"
-            android:layout_marginEnd="@dimen/grid_margin_side"
-            app:layout_constraintBottom_toTopOf="@+id/beaker"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/toolbar"
-            app:layout_constraintVertical_weight="0.5" />
-
-        <ImageView
-            android:id="@+id/beaker"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:contentDescription="@string/beakerDescription"
-            android:src="@drawable/beaker"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintDimensionRatio="1"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/componentsList"
-            app:layout_constraintVertical_weight="0.4" />
-
-        <TextView
-            android:id="@+id/tv_volume_beaker_text"
-            style="@style/FinalDilutionBeakerTitle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="50dp"
-            android:layout_marginEnd="36dp"
-            android:text="@string/volumeText"
-            app:layout_constraintBottom_toTopOf="@+id/volumeViewSwitcher"
-            app:layout_constraintEnd_toEndOf="@+id/beaker"
-            app:layout_constraintStart_toStartOf="@+id/beaker" />
-
-        <ViewSwitcher
-            android:id="@+id/volumeViewSwitcher"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:layout_gravity="center"
-            app:layout_constraintBottom_toBottomOf="@+id/beaker"
-            app:layout_constraintEnd_toEndOf="@+id/beaker"
-            app:layout_constraintStart_toStartOf="@+id/beaker"
-            app:layout_constraintTop_toTopOf="@+id/beaker">
-
+            app:layout_constraintTop_toBottomOf="@+id/toolbar">
 
             <androidx.constraintlayout.widget.ConstraintLayout
-                android:id="@+id/relativeLayout"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="wrap_content">
 
 
-                <EditText
-                    android:id="@+id/beakerVolumeEditText"
+                <android.support.v7.widget.RecyclerView
+                    android:id="@+id/componentsList"
                     android:layout_width="0dp"
-                    android:layout_height="fill_parent"
-                    android:focusableInTouchMode="true"
-                    android:gravity="end"
-                    android:inputType="numberDecimal"
-                    android:textAppearance="?android:attr/textAppearanceMedium"
-                    app:layout_constraintEnd_toStartOf="@+id/beakerVolumeEditTextUnit"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="@dimen/grid_margin_side"
+                    android:layout_marginEnd="@dimen/grid_margin_side"
+                    app:layout_constraintBottom_toTopOf="@+id/beaker"
+                    app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
 
+                <ImageView
+                    android:id="@+id/beaker"
+                    android:layout_width="0dp"
+                    android:layout_height="0dp"
+                    android:contentDescription="@string/beakerDescription"
+                    android:src="@drawable/beaker"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintDimensionRatio="1"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/componentsList"
+                    app:layout_constraintWidth_max="300dp" />
+
                 <TextView
-                    android:id="@+id/beakerVolumeEditTextUnit"
+                    android:id="@+id/tv_volume_beaker_text"
+                    style="@style/FinalDilutionBeakerTitle"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/mililiters"
-                    android:textAppearance="?android:attr/textAppearanceMedium"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toEndOf="@id/beakerVolumeEditText"
-                    app:layout_constraintTop_toTopOf="parent" />
+                    android:layout_marginStart="50dp"
+                    android:layout_marginEnd="36dp"
+                    android:text="@string/volumeText"
+                    app:layout_constraintBottom_toTopOf="@+id/volumeViewSwitcher"
+                    app:layout_constraintEnd_toEndOf="@+id/beaker"
+                    app:layout_constraintStart_toStartOf="@+id/beaker" />
+
+                <ViewSwitcher
+                    android:id="@+id/volumeViewSwitcher"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
+                    android:layout_gravity="center"
+                    app:layout_constraintBottom_toBottomOf="@+id/beaker"
+                    app:layout_constraintEnd_toEndOf="@+id/beaker"
+                    app:layout_constraintStart_toStartOf="@+id/beaker"
+                    app:layout_constraintTop_toTopOf="@+id/beaker">
+
+
+                    <androidx.constraintlayout.widget.ConstraintLayout
+                        android:id="@+id/relativeLayout"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent">
+
+
+                        <EditText
+                            android:id="@+id/beakerVolumeEditText"
+                            android:layout_width="0dp"
+                            android:layout_height="fill_parent"
+                            android:focusableInTouchMode="true"
+                            android:gravity="end"
+                            android:inputType="numberDecimal"
+                            android:textAppearance="?android:attr/textAppearanceMedium"
+                            app:layout_constraintEnd_toStartOf="@+id/beakerVolumeEditTextUnit"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toTopOf="parent" />
+
+                        <TextView
+                            android:id="@+id/beakerVolumeEditTextUnit"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="@string/mililiters"
+                            android:textAppearance="?android:attr/textAppearanceMedium"
+                            app:layout_constraintBottom_toBottomOf="parent"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintStart_toEndOf="@id/beakerVolumeEditText"
+                            app:layout_constraintTop_toTopOf="parent" />
+
+                    </androidx.constraintlayout.widget.ConstraintLayout>
+
+                    <TextView
+                        android:id="@+id/beakerVolumeTextView"
+                        android:layout_width="wrap_content"
+                        android:layout_height="fill_parent"
+                        android:gravity="end"
+                        android:text="@string/volumeText"
+                        android:textAppearance="?android:attr/textAppearanceMedium"
+                        android:textColor="#85D3FA"
+                        android:textSize="30sp"
+                        tools:text="34543 ml" />
+
+                </ViewSwitcher>
 
             </androidx.constraintlayout.widget.ConstraintLayout>
-
-            <TextView
-                android:id="@+id/beakerVolumeTextView"
-                android:layout_width="wrap_content"
-                android:layout_height="fill_parent"
-                android:gravity="end"
-                android:text="@string/volumeText"
-                android:textAppearance="?android:attr/textAppearanceMedium"
-                android:textColor="#85D3FA"
-                android:textSize="30sp"
-                tools:text="34543 ml" />
-
-        </ViewSwitcher>
+        </android.support.v4.widget.NestedScrollView>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
