--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -18,4 +18,7 @@
     <dimen name="compound_list_item_height">60dp</dimen>
     <dimen name="button_one_fifth">60dp</dimen>
     <dimen name="bottom_sheet_header_height">50dp</dimen>
+    <dimen name="bottom_sheet_elevation">40dp</dimen>
+    <dimen name="button_search_elevation">6dp</dimen>
+    <dimen name="button_above_search_elevation">10dp</dimen>
 </resources>
