--- a/app/src/main/res/layout/solution_edit.xml
+++ b/app/src/main/res/layout/solution_edit.xml
@@ -43,6 +43,7 @@
             android:id="@+id/scrollView"
             android:layout_width="match_parent"
             android:layout_height="0dp"
+            android:fillViewport="true"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/toolbar">
 
@@ -57,6 +58,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="@dimen/grid_margin_side"
                     android:layout_marginEnd="@dimen/grid_margin_side"
+                    app:layout_constraintVertical_chainStyle="spread_inside"
                     app:layout_constraintBottom_toTopOf="@+id/beaker"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
