--- a/app/src/main/res/layout/component_edit.xml
+++ b/app/src/main/res/layout/component_edit.xml
@@ -248,7 +248,7 @@
             android:id="@+id/buttonAddCompoundDone"
             style="@style/FinalDilutionButton"
             android:layout_marginEnd="@dimen/grid_margin_side"
-            android:layout_marginBottom="24dp"
+            android:layout_marginBottom="@dimen/grid_margin_side"
             android:contentDescription="@string/navigation_proceed"
             android:src="@drawable/ic_check_black_24dp"
             android:tint="@color/white"
@@ -259,7 +259,7 @@
             android:id="@+id/buttonAddCompoundCancel"
             style="@style/FinalDilutionButton"
             android:layout_marginStart="@dimen/grid_margin_side"
-            android:layout_marginBottom="24dp"
+            android:layout_marginBottom="@dimen/grid_margin_side"
             android:contentDescription="@string/navigation_back"
             android:src="@drawable/ic_arrow_back_black_24dp"
             android:tint="@color/white"
@@ -269,7 +269,7 @@
         <ImageButton
             android:id="@+id/buttonAddCompoundDelete"
             style="@style/FinalDilutionButton"
-            android:layout_marginBottom="24dp"
+            android:layout_marginBottom="@dimen/grid_margin_side"
             android:contentDescription="@string/action_delete"
             android:src="@drawable/ic_clear_white_24dp"
             android:tint="@color/white"
