--- a/app/src/main/res/layout/compound_new.xml
+++ b/app/src/main/res/layout/compound_new.xml
@@ -161,7 +161,7 @@
             style="@style/FinalDilutionButton"
             android:layout_marginStart="@dimen/grid_margin_side"
             android:layout_marginTop="24dp"
-            android:layout_marginBottom="24dp"
+            android:layout_marginBottom="@dimen/grid_margin_side"
             android:contentDescription="@string/navigation_back"
             android:src="@drawable/ic_arrow_back_black_24dp"
             android:tint="@color/white"
