--- a/app/src/main/res/layout/compound_panel.xml
+++ b/app/src/main/res/layout/compound_panel.xml
@@ -52,7 +52,7 @@
         android:id="@+id/new_compound_button"
         style="@style/FinalDilutionButton"
         android:layout_marginStart="@dimen/grid_margin_side"
-        android:layout_marginBottom="24dp"
+        android:layout_marginBottom="@dimen/grid_margin_side"
         android:contentDescription="@string/buttonNewCompound"
         android:src="@drawable/ic_add_black_24dp"
         android:textSize="25sp"
@@ -65,7 +65,7 @@
         android:layout_width="wrap_content"
         android:layout_height="@dimen/button_size"
         android:layout_marginEnd="@dimen/grid_margin_side"
-        android:layout_marginBottom="24dp"
+        android:layout_marginBottom="@dimen/grid_margin_side"
         android:background="@drawable/search_button"
         android:contentDescription="@string/button_search_description"
         android:drawableStart="@drawable/ic_search_white_24dp"
