--- a/app/src/main/res/layout/solution_edit.xml
+++ b/app/src/main/res/layout/solution_edit.xml
@@ -111,7 +111,7 @@
 
                         <EditText
                             android:id="@+id/beakerVolumeEditText"
-                            android:layout_width="0dp"
+                            android:layout_width="wrap_content"
                             android:layout_height="fill_parent"
                             android:focusableInTouchMode="true"
                             android:gravity="end"
