--- a/app/src/main/res/layout/solution_edit.xml
+++ b/app/src/main/res/layout/solution_edit.xml
@@ -41,7 +41,7 @@
                 android:layout_height="wrap_content"
                 android:background="@color/transparent"
                 android:gravity="center"
-                android:inputType="text"
+                android:inputType="textNoSuggestions"
                 tools:text="Solution name" />
 
         </android.support.v7.widget.Toolbar>
