--- a/app/src/main/res/layout/solution_edit.xml
+++ b/app/src/main/res/layout/solution_edit.xml
@@ -26,14 +26,6 @@
             app:layout_constraintVertical_chainStyle="spread_inside"
             app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
 
-            <ImageView
-                android:id="@+id/back"
-                android:layout_width="24dp"
-                android:layout_height="24dp"
-                android:layout_marginStart="@dimen/grid_margin_side"
-                android:contentDescription="@string/navigation_back"
-                android:src="@drawable/ic_chevron_left_black_24dp" />
-
             <EditText
                 android:id="@+id/solution_toolbar_text"
                 style="@style/FinalDilutionH1"
@@ -156,7 +148,19 @@
                 </ViewSwitcher>
 
             </androidx.constraintlayout.widget.ConstraintLayout>
+
         </android.support.v4.widget.NestedScrollView>
+
+        <ImageButton
+            android:id="@+id/back"
+            style="@style/FinalDilutionButton"
+            android:layout_marginStart="@dimen/grid_margin_side"
+            android:layout_marginBottom="@dimen/grid_margin_side"
+            android:contentDescription="@string/navigation_back"
+            android:src="@drawable/ic_arrow_back_black_24dp"
+            android:tint="@color/white"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
