--- a/app/src/main/res/layout/compound_panel.xml
+++ b/app/src/main/res/layout/compound_panel.xml
@@ -8,7 +8,7 @@
     android:elevation="@dimen/bottom_sheet_elevation"
     app:behavior_hideable="false"
     app:behavior_peekHeight="@dimen/bottom_sheet_collapsed_height"
-    app:layout_behavior="android.support.design.widget.BottomSheetBehavior"
+    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
     app:layout_constraintHeight_percent="80">
 
     <com.labwhisper.biotech.finaldilution.compound.view.AddComponentButtonView
@@ -36,7 +36,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/compoundsListHeader" />
 
-    <android.support.v7.widget.RecyclerView
+    <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/compoundsListView"
         android:layout_width="0dp"
         android:layout_height="0dp"
