Scaled down concentration buttons as there are 5 now

--- a/app/src/main/res/layout/component_edit.xml
+++ b/app/src/main/res/layout/component_edit.xml
@@ -58,7 +58,7 @@
                 style="@style/FinalDilutionBigButton"
                 android:layout_width="@dimen/button_one_fifth"
                 android:layout_height="@dimen/button_one_fifth"
-                android:layout_marginEnd="6dp"
+                android:layout_marginEnd="@dimen/concentrationButtonsHorizontalSpace"
                 android:button="@null"
                 android:gravity="center"
                 android:text="@string/percent" />
@@ -68,7 +68,7 @@
                 style="@style/FinalDilutionBigButton"
                 android:layout_width="@dimen/button_one_fifth"
                 android:layout_height="@dimen/button_one_fifth"
-                android:layout_marginEnd="6dp"
+                android:layout_marginEnd="@dimen/concentrationButtonsHorizontalSpace"
                 android:button="@null"
                 android:gravity="center"
                 android:text="@string/mol" />
@@ -78,7 +78,7 @@
                 style="@style/FinalDilutionBigButton"
                 android:layout_width="@dimen/button_one_fifth"
                 android:layout_height="@dimen/button_one_fifth"
-                android:layout_marginEnd="6dp"
+                android:layout_marginEnd="@dimen/concentrationButtonsHorizontalSpace"
                 android:button="@null"
                 android:gravity="center"
                 android:text="@string/milimol" />
@@ -88,7 +88,7 @@
                 style="@style/FinalDilutionBigButton"
                 android:layout_width="@dimen/button_one_fifth"
                 android:layout_height="@dimen/button_one_fifth"
-                android:layout_marginEnd="6dp"
+                android:layout_marginEnd="@dimen/concentrationButtonsHorizontalSpace"
                 android:button="@null"
                 android:gravity="center"
                 android:text="@string/mg_ml" />
@@ -192,7 +192,7 @@
                 style="@style/FinalDilutionBigButton"
                 android:layout_width="@dimen/button_one_fifth"
                 android:layout_height="@dimen/button_one_fifth"
-                android:layout_marginEnd="6dp"
+                android:layout_marginEnd="@dimen/concentrationButtonsHorizontalSpace"
                 android:button="@null"
                 android:gravity="center"
                 android:text="@string/percent"
@@ -204,7 +204,7 @@
                 style="@style/FinalDilutionBigButton"
                 android:layout_width="@dimen/button_one_fifth"
                 android:layout_height="@dimen/button_one_fifth"
-                android:layout_marginEnd="6dp"
+                android:layout_marginEnd="@dimen/concentrationButtonsHorizontalSpace"
                 android:button="@null"
                 android:gravity="center"
                 android:text="@string/mol"
@@ -216,7 +216,7 @@
                 style="@style/FinalDilutionBigButton"
                 android:layout_width="@dimen/button_one_fifth"
                 android:layout_height="@dimen/button_one_fifth"
-                android:layout_marginEnd="6dp"
+                android:layout_marginEnd="@dimen/concentrationButtonsHorizontalSpace"
                 android:button="@null"
                 android:gravity="center"
                 android:text="@string/milimol"
@@ -228,7 +228,7 @@
                 style="@style/FinalDilutionBigButton"
                 android:layout_width="@dimen/button_one_fifth"
                 android:layout_height="@dimen/button_one_fifth"
-                android:layout_marginEnd="6dp"
+                android:layout_marginEnd="@dimen/concentrationButtonsHorizontalSpace"
                 android:button="@null"
                 android:gravity="center"
                 android:text="@string/mg_ml"
