Remove unnecessary Floating action buttons

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -39,6 +39,14 @@
         <item name="android:textStyle">bold</item>
     </style>
 
+    <style name="FinalDilutionBackButton">
+        <item name="android:layout_height">@dimen/back_button_size</item>
+        <item name="android:layout_width">@dimen/back_button_size</item>
+        <item name="android:layout_marginEnd">4dp</item>
+        <item name="android:src">@drawable/ic_arrow_back_black_24dp</item>
+        <item name="android:tint">@color/colorPrimary</item>
+    </style>
+
     <style name="FinalDilutionButton">
         <item name="android:stateListAnimator">@animator/button_state_list_anim_material</item>
         <item name="android:layout_centerHorizontal">true</item>
