--- a/app/src/main/res/layout/component_edit.xml
+++ b/app/src/main/res/layout/component_edit.xml
@@ -12,19 +12,30 @@
         android:background="@color/white"
         tools:context=".component.view.EditComponentFragment">
 
-        <TextView
-            android:id="@+id/new_component_title"
-            style="@style/FinalDilutionH1"
-            android:layout_width="0dp"
+        <androidx.appcompat.widget.Toolbar
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
             android:layout_height="70dp"
             android:background="@color/secondary_background"
-            android:gravity="center"
-            android:paddingStart="@dimen/grid_margin_side"
-            android:paddingEnd="@dimen/grid_margin_side"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:text="very long COMPONENT NAME" />
+            app:layout_constraintTop_toTopOf="parent">
+
+            <ImageView
+                android:id="@+id/backToSolution"
+                style="@style/FinalDilutionBackButton"
+                android:contentDescription="@string/navigation_back" />
+
+            <TextView
+                android:id="@+id/new_component_title"
+                style="@style/FinalDilutionH1"
+                android:layout_width="match_parent"
+                android:layout_height="70dp"
+                android:gravity="center"
+                android:paddingEnd="@dimen/grid_margin_side"
+                tools:text="very long COMPONENT NAME" />
+
+        </androidx.appcompat.widget.Toolbar>
 
         <TextView
             android:id="@+id/desiredConcTextView"
@@ -36,7 +47,7 @@
             android:textAppearance="?android:attr/textAppearanceLarge"
             app:layout_constraintBottom_toTopOf="@+id/desiredConcButtonsBar"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/new_component_title"
+            app:layout_constraintTop_toBottomOf="@+id/toolbar"
             app:layout_constraintVertical_chainStyle="packed" />
 
         <RadioGroup
@@ -277,28 +288,6 @@
             android:tint="@color/white"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent" />
-
-        <ImageButton
-            android:id="@+id/buttonAddCompoundCancel"
-            style="@style/FinalDilutionButton"
-            android:layout_marginStart="@dimen/grid_margin_side"
-            android:layout_marginBottom="@dimen/grid_margin_side"
-            android:contentDescription="@string/navigation_back"
-            android:src="@drawable/ic_arrow_back_black_24dp"
-            android:tint="@color/white"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
-
-        <ImageButton
-            android:id="@+id/buttonAddCompoundDelete"
-            style="@style/FinalDilutionButton"
-            android:layout_marginBottom="@dimen/grid_margin_side"
-            android:contentDescription="@string/action_delete"
-            android:src="@drawable/ic_clear_white_24dp"
-            android:tint="@color/white"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/buttonAddCompoundDone"
-            app:layout_constraintStart_toEndOf="@+id/buttonAddCompoundCancel" />
 
         <View
             android:id="@+id/bottom_view"
