--- a/app/src/main/res/menu/menu_component.xml
+++ b/app/src/main/res/menu/menu_component.xml
@@ -5,7 +5,7 @@
     <item
         android:id="@+id/action_delete_component"
         android:orderInCategory="100"
-        android:title="@string/action_delete"
+        android:title="@string/action_remove"
         app:showAsAction="never" />
 
 </menu>
