--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -22,4 +22,5 @@
     <dimen name="button_search_elevation">6dp</dimen>
     <dimen name="button_above_search_elevation">10dp</dimen>
     <dimen name="concentrationButtonsHorizontalSpace">4dp</dimen>
+    <dimen name="back_button_size">32dp</dimen>
 </resources>
