--- a/app/src/main/res/layout/compound_list_item.xml
+++ b/app/src/main/res/layout/compound_list_item.xml
@@ -4,10 +4,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginTop="4dp"
-    android:layout_marginBottom="4dp"
     android:layout_marginStart="@dimen/grid_margin_side"
-    android:layout_marginEnd="@dimen/grid_margin_side">
+    android:layout_marginTop="4dp"
+    android:layout_marginEnd="@dimen/grid_margin_side"
+    android:layout_marginBottom="4dp"
+    android:clickable="true"
+    android:focusable="true"
+    android:foreground="?android:attr/selectableItemBackground">
 
 
     <TextView
