--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -23,4 +23,5 @@
     <dimen name="button_above_search_elevation">10dp</dimen>
     <dimen name="concentrationButtonsHorizontalSpace">4dp</dimen>
     <dimen name="back_button_size">32dp</dimen>
+    <dimen name="well_done_size">100dp</dimen>
 </resources>
