--- a/app/src/main/res/layout/solution_list_item.xml
+++ b/app/src/main/res/layout/solution_list_item.xml
@@ -14,18 +14,19 @@
         android:paddingStart="?android:attr/listPreferredItemPaddingStart"
         android:paddingEnd="?android:attr/listPreferredItemPaddingEnd"
         android:textAppearance="@android:style/TextAppearance.Medium"
-        tools:text="Solution X"
         android:textSize="20sp"
-        android:textStyle="bold" />
+        android:textStyle="bold"
+        tools:text="Solution X" />
 
     <TextView
         android:id="@+id/solution_list_text2"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
-        tools:text="578ml 2 components"
+        android:paddingStart="?android:attr/listPreferredItemPaddingStart"
+        android:paddingEnd="?android:attr/listPreferredItemPaddingEnd"
         android:textAppearance="@android:style/TextAppearance.Small"
         android:textSize="12sp"
-        />
+        tools:text="578ml 2 components" />
 
 </LinearLayout>
