--- a/app/src/main/res/layout/compound_new.xml
+++ b/app/src/main/res/layout/compound_new.xml
@@ -103,10 +103,22 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/grid_margin_side"
                 android:layout_marginEnd="@dimen/grid_margin_side"
-                app:layout_constraintBottom_toTopOf="@+id/form_expand_advanced"
+                app:layout_constraintBottom_toTopOf="@+id/form_density"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/form_name" />
+
+            <include
+                android:id="@+id/form_density"
+                layout="@layout/form_input_field"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/grid_margin_side"
+                android:layout_marginEnd="@dimen/grid_margin_side"
+                app:layout_constraintBottom_toTopOf="@+id/form_expand_advanced"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/form_molar_mass" />
 
             <ImageButton
                 android:id="@+id/form_expand_advanced"
@@ -121,7 +133,7 @@
                 android:tint="@color/cyan"
                 app:layout_constraintBottom_toTopOf="@+id/form_trivial_name"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/form_molar_mass" />
+                app:layout_constraintTop_toBottomOf="@+id/form_density" />
 
             <include
                 android:id="@+id/form_trivial_name"
