No molar mass warning.

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -89,4 +89,14 @@
         <item name="android:scaleY">1.3</item>
     </style>
 
+    <style name="FinalDilutionWarning">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textColor">@color/text_error</item>
+        <item name="android:gravity">center</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:typeface">sans</item>
+        <!--        <item name="android:background">@color/background_error</item>-->
+    </style>
+
 </resources>
