--- a/app/src/main/res/layout/component_edit.xml
+++ b/app/src/main/res/layout/component_edit.xml
@@ -38,6 +38,18 @@
         </androidx.appcompat.widget.Toolbar>
 
         <TextView
+            android:id="@+id/warningTextView"
+            style="@style/FinalDilutionWarning"
+            android:padding="4dp"
+            android:visibility="gone"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/toolbar"
+            app:layout_constraintVertical_bias="0.0"
+            tools:text="Warning: Not enough minerals"
+            tools:visibility="visible" />
+
+        <TextView
             android:id="@+id/desiredConcTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -47,7 +59,7 @@
             android:textAppearance="?android:attr/textAppearanceLarge"
             app:layout_constraintBottom_toTopOf="@+id/desiredConcButtonsBar"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/toolbar"
+            app:layout_constraintTop_toBottomOf="@+id/warningTextView"
             app:layout_constraintVertical_chainStyle="packed" />
 
         <RadioGroup
