Added info about missing density. Added logging. Error color set yellow.

--- a/app/src/main/res/layout/checklist.xml
+++ b/app/src/main/res/layout/checklist.xml
@@ -66,4 +66,19 @@
         app:layout_constraintTop_toBottomOf="@+id/checklist_compound"
         tools:text="36.0 [%]" />
 
+    <TextView
+        android:id="@+id/checklist_no_density"
+        style="@style/FinalDilutionListTextExtra"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/add_density_for_volume"
+        android:textColor="@color/text_error"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/checklist_amount"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toEndOf="@+id/checklist_stock"
+        app:layout_constraintTop_toBottomOf="@+id/checklist_compound"
+        tools:visibility="visible" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
